[package]
name = "aes_gcm"
version = "0.1.0"
authors = ["Adrian White <snarkyboojum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes_crypt = { git = "https://github.com/snarkyboojum/aes_crypt.git" }
# would be better if this was only a dev dependency
hex = "0.4.2"

[dev-dependencies]
hex = "0.4.2"